--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
 <body>
     <h1>WELCOME</h1>
     <p>This is my new website. Hope you like it.</p>
+    <h2>MEEP</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
 </body>
 
 
