--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <body>
     <h1>WELCOME</h1>
     <p>This is my new website. Hope you like it.</p>
-    <h2>MEEP</h2>
+    <h2>TEST 1</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+    <h3>TEST 2</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, earum.</p>
 </body>
 
 
