--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to my website</title>
+    <title>Alex's Portfolio</title>
 </head>
 <body>
     <h1>WELCOME</h1>
     <p>This is my new website. Hope you like it.</p>
     <h2>TEST 1</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+    <button>click me</button>
     <h3>TEST 2</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, earum.</p>
