--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <title>Alex's Portfolio</title>
 </head>
 <body>
+
     <h1>WELCOME</h1>
     <p>This is my new website. Hope you like it.</p>
+
     <h2>TEST 1</h2>
-    <button>click me</button>
+
+    <a href="https://www.google.com"
+        <button>click me</button>
+    </a>
+
     <h3>TEST 2</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, earum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+
 </body>
 
 
