--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link href = "style.css">
 <head>
     <title>Alex's Portfolio</title>
 </head>
@@ -10,19 +11,21 @@
 
     <h2>TEST 1</h2>
 
-        <button onclicl="doSomething()" style="background-color:blue;color:aqua;border-radius:5px;">click me</button>
-
-        <p id = "test">Hello</p>
-
-        <script>  
-            function doSomething(){
-                document.getElemetById("test").innerHTML = "Goodbye";
-            }
-        </script>
+    <a href = "aboutMe.html"
+        <button style="background-color:blue;color:aqua;border-radius:2px;size: 200px 200px;">click me</button>
+    </a>
 
     <h3>TEST 2</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+
+    <div class = "container">
+        <button class = "btn btn1">Hover Over</button>
+        <button class = "btn btn2">Hover Over</button>
+        <button class = "btn btn3">Hover Over</button>
+        <button class = "btn btn4">Hover Over</button>
+
+    </div>
 
 </body>
 
