--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
-<link href = "style.css">
+
 <head>
+
+    <link rel="stylessheet" href = "style.css">
     <title>Alex's Portfolio</title>
+
 </head>
+
 <body>
 
     <h1>WELCOME</h1>
+
+    <button class = "btn btn--primary">Click</button>
+
     <p>This is my new website. Hope you like it.</p>
 
     <h2>TEST 1</h2>
-
-    <a href = "aboutMe.html"
-        <button style="background-color:blue;color:aqua;border-radius:2px;size: 200px 200px;">click me</button>
-    </a>
 
     <h3>TEST 2</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 
-    <div class = "container">
-        <button class = "btn btn1">Hover Over</button>
-        <button class = "btn btn2">Hover Over</button>
-        <button class = "btn btn3">Hover Over</button>
-        <button class = "btn btn4">Hover Over</button>
-
-    </div>
+    <a href = "aboutMe.html"
+    <button style="background-color:blue;color:aqua;border-radius:2px;size: 500px 200px;">click me</button>
+    </a>
 
 </body>
 
