background image set

--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"
+    <script src="logic.js"></script>
 
-    <link rel="stylessheet" href = "style.css">
     <title>Alex's Portfolio</title>
-
+    
 </head>
 
 <body>
 
-    <h1>WELCOME</h1>
-
-    <button class = "btn btn--primary">Click</button>
-
-    <p>This is my new website. Hope you like it.</p>
-
-    <h2>TEST 1</h2>
-
-    <h3>TEST 2</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-
-    <a href = "aboutMe.html"
+    <!-- <a href = "aboutMe.html"
     <button style="background-color:blue;color:aqua;border-radius:2px;size: 500px 200px;">click me</button>
-    </a>
+    </a> -->
+
+    <div class="background-image"></div>
 
 </body>
+
+
 
 
 </html>
