--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
 
-    <!-- <a href = "aboutMe.html"
+    <a href = "aboutMe.html"
     <button style="background-color:blue;color:aqua;border-radius:2px;size: 500px 200px;">click me</button>
-    </a> -->
+    </a>
 
     <div class="background-image"></div>
 
