--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <a href = "aboutMe.html"
-    <button style="background-color:blue;color:aqua;border-radius:2px;size: 500px 200px;">About Me</button>
+    <button>About Me</button>
     </a>
 
     <div class="background-image"></div>
