--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 
 <body>
 
-    <a href = "aboutMe.html"
-    <button>About Me Button</button>
-    </a>
-
+    <a href="aboutMe.html">About Me</a>
     <div class="background-image"></div>
-
+    
 </body>
 
 
