--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Alex's Portfolio</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
 </head>
 <body>
-
-    <h1>ABOUT ME</h1>
-
+    
 </body>
-
-
 </html>
