--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="logo"></span>
+							<span class="icon fa-gem"></span>
+							<span class="image main"><img src="images/alex.png" alt="" /></span>
+							<style>
+								body { background-color: yellow; }
+								img { 
+								  width: 150px;
+								  margin-top: 0; 
+								}
+							  </style>
+							  
+							  <img src="images/alex.png" />
 						</div>
 						<div class="content">
 							<div class="inner">
