--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
-							<span class="image main"><img src="images/alex.png" alt="" /></span>
+							<!-- <span class="icon fa-gem"></span>
+							<span class="image main"><img src="images/alex.png" alt="" /></span> -->
 							<style>
 								body { background-color: yellow; }
 								img { 
-								  width: 150px;
-								  margin-top: 0; 
+								  width: 100%;
+								   
 								}
 							  </style>
 							  
