--- a/index.html
+++ b/index.html
@@ -20,16 +20,11 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<!-- <span class="icon fa-gem"></span>
-							<span class="image main"><img src="images/alex.png" alt="" /></span> -->
 							<style>
-								body { background-color: yellow; }
 								img { 
 								  width: 100%;
-								   
 								}
 							  </style>
-							  
 							  <img src="images/alex.png" />
 						</div>
 						<div class="content">
@@ -72,7 +67,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/groupPhoto.png" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
